Добавлены картинки с ледующий блок

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               height="25px"
               class="header__button-icon header__button-icon--visible"
             >
-              <use xlink:href="sprite.svg#user"></use>
+              <use xlink:href="images/sprite.svg#user"></use>
             </svg>
           </a>
         </div>
@@ -222,6 +222,87 @@
             <a href="#" class="cart-inner-descr__link-test">Пройти</a>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="advantge">
+      <div class="advantge__layout-grid carts-desc">
+        <h1 class="advantge__title">Преимущества платной подписки</h1>
+          <div class="carts-desc__cart">
+            <div class="carts-desc__inner-image">
+              <picture> 
+              <source type="image/avif" srcset="images/image-adv1.avif">
+              <source type="image/webp" srcset="images/image-adv1.webp">
+              <img src="images/image-adv1.png" data-src="images/image-adv1.pmg" alt="" class="carts-desc__image">
+              </picture>
+            </div>
+            <div class="carts-desc__inner-text">
+              <div class="carts-desc__inner-text-smear">
+                <svg class="carts-desc__text-smear">
+                <use xlink:href="images/sprite.svg#smear1"></use>
+                </svg>
+                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
+                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
+              </div>
+              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+            </div>
+          </div>
+          <div class="carts-desc__cart">
+            <div class="carts-desc__inner-image">
+              <picture> 
+              <source type="image/avif" srcset="images/image-adv2.avif">
+              <source type="image/webp" srcset="images/image-adv2.webp">
+              <img src="images/image-adv2.png" data-src="images/image-adv2.png" alt="" class="carts-desc__image">
+              </picture>
+            </div>
+            <div class="carts-desc__inner-text">
+              <div class="carts-desc__inner-text-smear">
+                <svg class="carts-desc__text-smear">
+                <use xlink:href="images/sprite.svg#smear2"></use>
+                </svg>
+                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
+                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
+              </div>
+              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+            </div>
+          </div>
+          <div class="carts-desc__cart">
+            <div class="carts-desc__inner-image">
+              <picture> 
+              <source type="image/avif" srcset="images/image-adv3.avif">
+              <source type="image/webp" srcset="images/image-adv3.webp">
+              <img src="images/image-adv3.png" data-src="images/image-adv3.png" alt="" class="carts-desc__image">
+              </picture>
+            </div>
+            <div class="carts-desc__inner-text">
+              <div class="carts-desc__inner-text-smear">
+                <svg class="carts-desc__text-smear">
+                <use xlink:href="images/sprite.svg#smear3"></use>
+                </svg>
+                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
+                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
+              </div>
+              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+            </div>
+          </div>
+          <div class="carts-desc__cart">
+            <div class="carts-desc__inner-image">
+              <picture> 
+              <source type="image/avif" srcset="images/image-adv4.avif">
+              <source type="image/webp" srcset="images/image-adv4.webp">
+              <img src="images/image-adv4.png" data-src="images/image-adv4.png" alt="" class="carts-desc__image">
+              </picture>
+            </div>
+            <div class="carts-desc__inner-text">
+              <div class="carts-desc__inner-text-smear">
+                <svg class="carts-desc__text-smear">
+                <use xlink:href="images/sprite.svg#smear4"></use>
+                </svg>
+                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
+                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
+              </div>
+              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+            </div>
+          </div>
       </div>
     </section>
   </body>
