--- a/index.html
+++ b/index.html
@@ -46,18 +46,11 @@
       </div>
     </header>
     <section class="first-screen">
-      <img src="images/bg-smear.svg" class="first-screen__bg-smear" alt="">
       <div class="first-screen__layout-grid grid-carts">
         <div class="grid-carts__cart1">
           <h1 class="grid-carts__cart1-main-title">
             Психологические консультации доступные каждому
           </h1>
-          <div class="grid-carts__cart1-inner-subtitle">
-            <p class="grid-carts__cart1-subtitle">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed dop
-              ex ea commodo consequat.
-            </p>
-          </div>
           <p class="grid-carts__cart1-desc-missions">
             Мы ценим время наших клиентов так же высоко как и оказанное нам
             доверие и поэтому мы предлагаем различные формы работы:
@@ -86,7 +79,7 @@
             <p class="cart-inner-descr__descr">
               У вас апатия? Опускаются руки? Мир стал черно-белым?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -101,7 +94,7 @@
             <p class="cart-inner-descr__descr">
               Срываетесь на близких? Чувствуете себя потерянным и одиноким?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -116,7 +109,7 @@
             <p class="cart-inner-descr__descr">
               Не можете определиться со сферой деятельности или вас не устраивает уже выбранная область?            
               </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -131,7 +124,7 @@
             <p class="cart-inner-descr__descr">
               Едите и не можете остановиться?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -146,7 +139,7 @@
             <p class="cart-inner-descr__descr">
               Ваш близкий человек пьет? Вы много раз пытались ему помочь, но все без толку?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -161,7 +154,7 @@
             <p class="cart-inner-descr__descr">
               Вы столкнулись с неразрешимой проблемой? Не знаете как двигаться дальше?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -176,7 +169,7 @@
             <p class="cart-inner-descr__descr">
               Не можете справиться с эмоциями? Вас накрывает?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -191,7 +184,7 @@
             <p class="cart-inner-descr__descr">
               Не складывается личная жизнь? На ножах с коллегами?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -206,7 +199,7 @@
             <p class="cart-inner-descr__descr">
               Страхи? Преследует тревога? Панические атаки?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
         <div class="grid-carts__cart grid-carts__cart--hover">
@@ -219,29 +212,30 @@
             <p class="cart-inner-descr__descr">
               Сексуальная жизнь не удовлетворительна?
             </p>
-            <a href="#" class="cart-inner-descr__link-test">Пройти</a>
+            <a href="#" class="cart-inner-descr__link-test">Пройти тест</a>
           </div>
         </div>
       </div>
     </section>
     <section class="advantge">
+      <h1 class="advantge__title">Преимущества платной подписки</h1>
       <div class="advantge__layout-grid carts-desc">
-        <h1 class="advantge__title">Преимущества платной подписки</h1>
           <div class="carts-desc__cart">
-            <div class="carts-desc__inner-image">
+            <div class="carts-desc__inner-image carts-desc__inner-image--modif">
               <picture> 
-              <source type="image/avif" srcset="images/image-adv1.avif">
-              <source type="image/webp" srcset="images/image-adv1.webp">
-              <img src="images/image-adv1.png" data-src="images/image-adv1.pmg" alt="" class="carts-desc__image">
+              <source type="image/avif" srcset="images/image-abv1.avif">
+              <source type="image/webp" srcset="images/image-abv1.webp">
+              <img src="images/image-abv1.png" data-src="images/image-abv1.png" alt="" class="carts-desc__image">
               </picture>
             </div>
             <div class="carts-desc__inner-text">
               <div class="carts-desc__inner-text-smear">
-                <svg class="carts-desc__text-smear">
-                <use xlink:href="images/sprite.svg#smear1"></use>
-                </svg>
+                <!-- <picture> 
+                  <source type="image/avif" srcset="images/images-abv-bg1.avif">
+                  <source type="image/webp" srcset="images/images-abv-bg1.webp">
+                  <img src="images/images-abv-bg1.png" data-src="images/images-adv-bg1.png" alt="" class="carts-desc__smear">
+                  </picture> -->
                 <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
-                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
               </div>
               <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
             </div>
@@ -249,58 +243,57 @@
           <div class="carts-desc__cart">
             <div class="carts-desc__inner-image">
               <picture> 
-              <source type="image/avif" srcset="images/image-adv2.avif">
-              <source type="image/webp" srcset="images/image-adv2.webp">
-              <img src="images/image-adv2.png" data-src="images/image-adv2.png" alt="" class="carts-desc__image">
+              <source type="image/avif" srcset="images/image-abv2.avif">
+              <source type="image/webp" srcset="images/image-abv2.webp">
+              <img src="images/image-abv2.png" data-src="images/image-abv2.png" alt="" class="carts-desc__image">
+              </picture>
+            </div>
+            <div class="carts-desc__inner-text text--modif">
+                <!-- <picture> 
+                  <source type="image/avif" srcset="images/images-abv-bg2.avif">
+                  <source type="image/webp" srcset="images/images-abv-bg2.webp">
+                  <img src="images/images-abv-bg2.png" data-src="images/images-adv-bg2.png" alt="" class="carts-desc__smear">
+                  </picture> -->
+                <h2 class="carts-desc__text-title">Ведение своего дневника терапии</h2>
+              <p class="carts-desc__desc">Записывайте все, считаете нужным. Это поможет вам структурировать свои мылси для продуктивной терапии.</p>
+            </div>
+          </div>
+          <div class="carts-desc__cart">
+            <div class="carts-desc__inner-image carts-desc__inner-image--modif">
+              <picture> 
+              <source type="image/avif" srcset="images/image-abv3.avif">
+              <source type="image/webp" srcset="images/image-abv3.webp">
+              <img src="images/image-abv3.png" data-src="images/image-abv3.png" alt="" class="carts-desc__image">
               </picture>
             </div>
             <div class="carts-desc__inner-text">
               <div class="carts-desc__inner-text-smear">
-                <svg class="carts-desc__text-smear">
-                <use xlink:href="images/sprite.svg#smear2"></use>
-                </svg>
-                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
-                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
+                <!-- <picture> 
+                  <source type="image/avif" srcset="images/images-abv-bg3.avif">
+                  <source type="image/webp" srcset="images/images-abv-bg3.webp">
+                  <img src="images/images-abv-bg3.png" data-src="images/images-adv-bg4.png" alt="" class="carts-desc__smear">
+                  </picture> -->
+                <h2 class="carts-desc__text-title">Получать домашние задание от терапевта</h2>
               </div>
-              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+              <p class="carts-desc__desc">Прохождение дистационной терапии</p>
             </div>
           </div>
           <div class="carts-desc__cart">
             <div class="carts-desc__inner-image">
               <picture> 
-              <source type="image/avif" srcset="images/image-adv3.avif">
-              <source type="image/webp" srcset="images/image-adv3.webp">
-              <img src="images/image-adv3.png" data-src="images/image-adv3.png" alt="" class="carts-desc__image">
+              <source type="image/avif" srcset="images/image-abv4.avif">
+              <source type="image/webp" srcset="images/image-abv4.webp">
+              <img src="images/image-abv4.png" data-src="images/image-abv4.png" alt="" class="carts-desc__image">
               </picture>
             </div>
-            <div class="carts-desc__inner-text">
-              <div class="carts-desc__inner-text-smear">
-                <svg class="carts-desc__text-smear">
-                <use xlink:href="images/sprite.svg#smear3"></use>
-                </svg>
-                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
-                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
-              </div>
-              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
-            </div>
-          </div>
-          <div class="carts-desc__cart">
-            <div class="carts-desc__inner-image">
-              <picture> 
-              <source type="image/avif" srcset="images/image-adv4.avif">
-              <source type="image/webp" srcset="images/image-adv4.webp">
-              <img src="images/image-adv4.png" data-src="images/image-adv4.png" alt="" class="carts-desc__image">
-              </picture>
-            </div>
-            <div class="carts-desc__inner-text">
-              <div class="carts-desc__inner-text-smear">
-                <svg class="carts-desc__text-smear">
-                <use xlink:href="images/sprite.svg#smear4"></use>
-                </svg>
-                <h2 class="carts-desc__text-title">Возможность проходить рекомендованные тесты</h2>
-                <div class="carts-desc__smear-hidden carts-desc__smear-hidden--js"></div>
-              </div>
-              <p class="carts-desc__desc">Возможность проходить рекомендованные персонально вам тесты</p>
+            <div class="carts-desc__inner-text text--modif">
+                <!-- <picture> 
+                  <source type="image/avif" srcset="images/images-abv-bg4.avif">
+                  <source type="image/webp" srcset="images/images-abv-bg4.webp">
+                  <img src="images/images-abv-bg4.png" data-src="images/images-adv-bg4.png" alt="" class="carts-desc__smear">
+                  </picture> -->
+                <h2 class="carts-desc__text-title">Открывать результаты для терапевта</h2>
+              <p class="carts-desc__desc">Вы можете открыть доступ своему психологу к результатам тестов и записей в дневнике</p>
             </div>
           </div>
       </div>
