--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Иванова&Навай — Психологические консультации онлайн</title>
   </head>
   <body class="b-page">
+  <svg>
+  <use xlink:href="images/sprite.svg#smear1"></use>
+  </svg>
     <header class="header">
       <div class="header__layout">
         <a href="#" class="header__inner-logo">
@@ -327,9 +330,9 @@
           </picture>
           <div class="carts-desc__inner-text">
             <h2 class="carts-desc__text-title">
-              Получать домашние задание от терапевта
+              Полу-очная терапия
             </h2>
-            <p class="carts-desc__desc">Прохождение дистационной терапии</p>
+            <p class="carts-desc__desc">Прохождение домашних заданий дистанционно</p>
           </div>
         </div>
         <div class="carts-desc__cart">
@@ -355,5 +358,8 @@
         </div>
       </div>
     </section>
+    <svg>
+      <use xlink:href="images/sprite.svg#smear2"></use>
+      </svg>
   </body>
 </html>
